--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "fs": "0.0.1-security",
     "path": "^0.12.7",
     "uniqid": "^5.4.0",
-    "url": "^0.11.4",
-    "vercel": "^37.5.4"
+    "url": "^0.11.4"
   }
 }
