--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "backend",
   "module": "index.js",
   "type": "module",
+  "scripts": {
+    "start": "node index.js"
+   },
   "devDependencies": {
     "@types/bun": "latest"
   },
