--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
         "src": "/(.*)",
         "dest": "/index.js"
         }
-    ]
+    ],
+    "installCommand": "pnpm install",
+    "buildCommand": "pnpm run build",
+    "outputDirectory": "dist"
 }
