--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "echo 'No build step required'"
    },
   "devDependencies": {
     "@types/bun": "latest"
